[gd_scene load_steps=11 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://VCR OSD Mono PL2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://FONT.tres" type="DynamicFont" id=3]
[ext_resource path="res://EthnicityPage/ChooseEthnicityStep.gd" type="Script" id=4]
[ext_resource path="res://Neuro Font PL.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="Ethnicity" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -54.0
margin_bottom = -100.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 970.0
margin_bottom = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PreviousEthnicity" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_top = 7.0
margin_right = 40.0
margin_bottom = 47.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "<"

[node name="EthnicityName" type="RichTextLabel" parent="VBoxContainer/HBoxContainer2"]
margin_left = 44.0
margin_right = 926.0
margin_bottom = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]NOT SET[/center]"
text = "NOT SET"
fit_content_height = true

[node name="NextEthnicity" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 930.0
margin_top = 7.0
margin_right = 970.0
margin_bottom = 47.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = ">"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 59.0
margin_right = 970.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0
custom_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 316.0
margin_bottom = 441.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="EthnicityPic" type="TextureRect" parent="VBoxContainer/HBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 306.0
margin_bottom = 431.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 336.0
margin_right = 970.0
margin_bottom = 441.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="EthnicityDescription" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 634.0
margin_bottom = 273.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "NOT SET"
text = "NOT SET"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 277.0
margin_right = 634.0
margin_bottom = 441.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 208.0
margin_bottom = 164.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 198.0
margin_bottom = 154.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TraitName" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button/MarginContainer/VBoxContainer"]
margin_right = 188.0
margin_bottom = 35.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Trait 1[/center]"
text = "Trait 1"

[node name="TraitDescription" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button/MarginContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 188.0
margin_bottom = 144.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "Trait Description"
text = "Trait Description"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 212.0
margin_right = 421.0
margin_bottom = 164.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button2/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 199.0
margin_bottom = 154.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TraitName" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button2/MarginContainer/VBoxContainer"]
margin_right = 189.0
margin_bottom = 35.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Trait 1[/center]"
text = "Trait 1"

[node name="TraitDescription" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button2/MarginContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 189.0
margin_bottom = 144.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "Trait Description"
text = "Trait Description"

[node name="Button3" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 425.0
margin_right = 634.0
margin_bottom = 164.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button3"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button3/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 199.0
margin_bottom = 154.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TraitName" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button3/MarginContainer/VBoxContainer"]
margin_right = 189.0
margin_bottom = 35.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Trait 1[/center]"
text = "Trait 1"

[node name="TraitDescription" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button3/MarginContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 189.0
margin_bottom = 144.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "Trait Description"
text = "Trait Description"

[connection signal="button_up" from="VBoxContainer/HBoxContainer2/PreviousEthnicity" to="." method="_on_PreviousEthnicity_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer2/NextEthnicity" to="." method="_on_NextEthnicity_button_up"]
